fix: add style z-index for product-modalwindow

--- a/components/Cart/styles.css
+++ b/components/Cart/styles.css
@@ -7,6 +7,7 @@
     height: 50px;
     padding: 10px 10px 0px 10px;
     color: var(--main-gray-color);
+    z-index: 7777;
   }
   .cart-item {
     display: flex;
@@ -35,6 +36,7 @@
     padding: 70px 30px;
     overflow: auto;
     box-sizing: border-box;
+    z-index: 7777;
   }
   .cart-table {
     border: 1px solid #ccc;
